--- a/services-ou.html
+++ b/services-ou.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.min.css">
-    <title>Органика</title>
+    <title>Органика - Товары и услуги</title>
 </head>
 
 <body>
@@ -28,7 +28,6 @@
                     <img src="./img/Логотип_мельница.png" alt="Логотип">
                     <div class="toolbar__logo">Органика</div>
                 </a>
-
             </div>
 
             <nav class="navbar">
@@ -74,12 +73,20 @@
     </header>
     <main class='content'>
         <div class="container">
-            <h2 class="content__h2">Сертификаты.</h2>
-            <div class="row">
-                <div class="col s12 m6 l6"><img class="responsive-img" src="./img/Сертификат-1.png" alt="Сертификат"></div>
-                <div class="col s12 m6 l6"><img class="responsive-img" src="./img/Distirbuter.png" alt="ПИСЬМО О ДИСТРИБЬЮТЕРСКОМ ПРАВЕ"></div>
-            </div>
-            
+            <h2 class="content__h2">ОУ (Органические удобрения)</h2>
+            <ol>
+                <li>
+                    <div>Органические гранулы пролонгированного действия из НАВОЗА КРС, фасовка 1000 кг.</div>
+                </li>
+                <li>
+                    <div>Органические гранулы пролонгированного действия из КОНСКОГО НАВОЗА, фасовка 1000 кг.</div>
+                </li>
+                <li>
+                    <div>Органические гранулы пролонгированного действия из КУРИНОГО ПОМЕТА, фасовка 1000 кг.</div>
+                </li>
+            </ol>
+            <p class="flow-text">Минимальная партия отгрузки (20 тонн)</p>
+
         </div>
     </main>
     <footer class=" page-footer footer">
@@ -142,13 +149,13 @@
                                     href="contact.html">Контакты</a></li>
                         </ul>
                         <ul class="footer__ul">
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://vk.com"><i
-                                        class="fab fa-vk"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://vk.com"><i class="fab fa-vk"></i></a></li>
 
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://facebook.com"><i
-                                        class="fab fa-facebook-f"></i></a></li>
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://instagram.com/organika77/"><i
-                                        class="fab fa-instagram"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://facebook.com"><i class="fab fa-facebook-f"></i></a></li>
+                            <li class="footer__social waves-effect waves-light"><a target="blank"
+                                    href="http://instagram.com/organika77/"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
