--- a/mineral'nyye_udobreniya.html
+++ b/mineral'nyye_udobreniya.html
@@ -34,7 +34,9 @@
             <nav class="navbar">
                 <ul>
                     <li> <a class="waves-effect waves-light" href="index.html">Главная</a></li>
-                    <li> <a class="waves-effect waves-light" href="services.html">ОМУ (Органоминеральные удобрения)</a></li>
+                    <li> <a class="waves-effect waves-light" href="services.html">ОМУ (Органоминеральные удобрения)</a>
+                    </li>
+                    <li> <a class="waves-effect waves-light" href="services-ou.html">ОУ (Органические удобрения)</a></li>
                     <li> <a class="waves-effect waves-light" href="recomendatsii-po-primrneniu.html">Рекомендации по
                             применению</a></li>
                     <li> <a class="waves-effect waves-light" href="mineral'nyye_udobreniya.html">Азотные минеральные
@@ -152,11 +154,38 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Laborum quis adipisci fugiat laboriosam, sapiente debitis doloremque hic maiores explicabo sit
-                        odio fuga doloribus in ad aliquid, voluptates vel perferendis ipsam dignissimos quod dolorum.
-                        Aut temporibus aliquid earum magnam rerum vel.</p>
+                    <h5 class="white-text">Уникальная гранула</h5>
+                    <p class="grey-text text-lighten-4">Органоминеральное удобрение — гранулированное комплексное
+                        удобрение пролонгированного действия на основе навоза крупного рогатого скота. Представляет
+                        собой гранулы темно-коричневого цвета, диаметром - 6 мм. Специально разработанная гранула
+                        содержит в своем составе до 85% органических веществ, а также азот, фосфор, калий, магний и все
+                        необходимые микроэлементы.</p>
+                    <a class="waves-effect waves-light btn-small readmore_start">Читать полностью</a>
+                    <div class="readmore">
+                        <p class="grey-text text-lighten-4">Попадая на поверхность почвы, гранула постепенно и
+                            равномерно
+                            растворяется, высвобождая при этом
+                            питательные элементы для ризосферных бактерий, которые фиксируют атмосферный азот и
+                            переводят
+                            его в усвояемую форму для жизнедеятельности полезной микрофлоры почвы, которая синтезирует
+                            вещества, блокирующие развитие фитопатогенных микроорганизмов, и в конце концов для самого
+                            растения, обеспечивая его пищей в осенне-зимний период.</p>
+                        <p class="grey-text text-lighten-4">В почве в течение двух трех дней,
+                            <b>гранула увеличится в
+                                размерах в несколько раз, и в связи с
+                                активной жизнедеятельностью биоты (бактерии и микроорганизмы) почвы органоминеральный
+                                субстрат
+                                распределяется по всей площади внесения.</b>
+
+                            Минеральные элементы, находящиеся в
+                            доступной форме,
+                            сразу проникают в почвенный раствор в зону развития корневой системы, а питательные вещества
+                            из
+                            органической части удобрения постепенно питают растение на протяжении последующих 2-3
+                            месяцев.
+                        </p>
+                    </div>
+                    <a class="waves-effect waves-light btn-small readmore_end">Скрыть</a>
                 </div>
                 <div class="col l5 offset-l1 s12">
                     <h5 class="white-text">Навигация по сайту</h5>
@@ -166,6 +195,8 @@
                                     href="index.html">Главная</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="services.html">ОМУ (Органоминеральные удобрения)</a></li>
+                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
+                                    href="services-ou.html">ОУ (Органические удобрения)</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
                                     href="recomendatsii-po-primrneniu.html">Рекомендации по применению</a></li>
                             <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
