--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="row">
+    <div class="row mb-0">
     <div class="col s12 m4 l2" style="position: fixed; z-index: 10; height: 100vh;">
         <header class="main__header">
             <div class="fixed-menu">
@@ -69,9 +69,9 @@
             
         </header>
     </div>
-    <div class="col s12 m8 l10" style="margin-left: 16%;">
+    <div class="col s12 m8 l10 col_ml" style="margin-left: 16%;">
         <main>
-            <div class="header-text" style="">
+            <div class="header-text">
                 <div class="container">
                     <div class="header__wraper">
                         <div class="header__subtitle">Эксклюзивный дистрибьютор ООО &ldquo;РОСОМУ&rdquo;</div>
