--- a/reviews.html
+++ b/reviews.html
@@ -15,146 +15,184 @@
 </head>
 
 <body>
-    <header class="main__header" style="background-image: url('./img/4.jpg');">
-        <div class="fixed-menu">
-            <a href="#" data-target="slide-out" class="sidenav-trigger">
-                <i class="material-icons">menu</i>
-            </a>
-        </div>
-        <ul id="slide-out" class="sidenav toolbar">
-            <i class="material-icons close">close</i>
-            <div class="toolbar__tel">
-                <a class="waves-effect waves-light" href="index.html">
-                    <img src="./img/Логотип_мельница.png" alt="Логотип">
-                    <div class="toolbar__logo">Органика</div>
-                </a>
-
-            </div>
-
-            <nav class="navbar">
-                <ul>
-                    <li> <a class="waves-effect waves-light" href="index.html">Главная</a></li>
-                    <li> <a class="waves-effect waves-light" href="services.html">ОМУ (Органоминеральные удобрения)</a>
-                    </li>
-                    <li> <a class="waves-effect waves-light" href="services-ou.html">ОУ (Органические удобрения)</a></li>
-                    <li> <a class="waves-effect waves-light" href="recomendatsii-po-primrneniu.html">Рекомендации по
-                            применению</a></li>
-                    <li> <a class="waves-effect waves-light" href="mineral'nyye_udobreniya.html">Азотные минеральные
-                            удобрения</a></li>
-                    <li> <a class="waves-effect waves-light" href="сertifications.html">Сертификаты</a></li>
-                    <li> <a class="waves-effect waves-light" href="reviews.html">Отзывы</a></li>
-                    <li> <a class="waves-effect waves-light" href="contact.html">Контакты</a></li>
-                </ul>
-            </nav>
-            <div class="bottom_link">
-                <div class="tel">
-                    <a href="tel:88612125908" class="link"><i class="fas fa-phone"></i> 8(861)-212-59-08</a>
+    <div class="row">
+        <div class="col s12 m4 l2" style="position: fixed; z-index: 10; height: 100vh;">
+            <header class="main__header">
+                <div class="fixed-menu">
+                    <a href="#" data-target="slide-out" class="sidenav-trigger">
+                        <i class="material-icons">menu</i>
+                    </a>
                 </div>
-                <div class="tel">
-                    <a href="tel:89282808892" class="link"><i class="fas fa-mobile-alt"></i> 8(928)-280-88-92</a>
-                </div>
-                <div class="tel">
-                    <a href="mailto:organika.00@mail.ru" class="email"><i class="fas fa-envelope"></i>
-                        organika.00@mail.ru</a>
-                </div>
+                <ul id="slide-out" class="sidenav toolbar">
+                    <i class="material-icons close">close</i>
+                    <div class="toolbar__tel">
+                        <a class="waves-effect waves-light" href="index.html">
+                            <img src="./img/Логотип_мельница.png" alt="Логотип">
+                            <div class="toolbar__logo">Органика</div>
+                        </a>
 
-            </div>
-
-        </ul>
-        <div class="header">
-            <div class="container">
-                <div class="header__wraper">
-                    <div class="header__subtitle">Эксклюзивный дистрибьютор ООО &ldquo;РОСОМУ&rdquo;</div>
-                    <div class="header__title">Органика</div>
-                    <div class="header__subtitle">Продажа органического и органоминерального удобрения</div>
-
-                </div>
-            </div>
-        </div>
-    </header>
-    <main class='content'>
-        <div class="container">
-            <h2 class="content__h2">Отзывы</h2>
-        </div>
-    </main>
-    <footer class=" page-footer footer">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Уникальная гранула</h5>
-                    <p class="grey-text text-lighten-4">Органоминеральное удобрение — гранулированное комплексное
-                        удобрение пролонгированного действия на основе навоза крупного рогатого скота. Представляет
-                        собой гранулы темно-коричневого цвета, диаметром - 6 мм. Специально разработанная гранула
-                        содержит в своем составе до 85% органических веществ, а также азот, фосфор, калий, магний и все
-                        необходимые микроэлементы.</p>
-                    <a class="waves-effect waves-light btn-small readmore_start">Читать полностью</a>
-                    <div class="readmore">
-                        <p class="grey-text text-lighten-4">Попадая на поверхность почвы, гранула постепенно и
-                            равномерно
-                            растворяется, высвобождая при этом
-                            питательные элементы для ризосферных бактерий, которые фиксируют атмосферный азот и
-                            переводят
-                            его в усвояемую форму для жизнедеятельности полезной микрофлоры почвы, которая синтезирует
-                            вещества, блокирующие развитие фитопатогенных микроорганизмов, и в конце концов для самого
-                            растения, обеспечивая его пищей в осенне-зимний период.</p>
-                        <p class="grey-text text-lighten-4">В почве в течение двух трех дней,
-                            <b>гранула увеличится в
-                                размерах в несколько раз, и в связи с
-                                активной жизнедеятельностью биоты (бактерии и микроорганизмы) почвы органоминеральный
-                                субстрат
-                                распределяется по всей площади внесения.</b>
-
-                            Минеральные элементы, находящиеся в
-                            доступной форме,
-                            сразу проникают в почвенный раствор в зону развития корневой системы, а питательные вещества
-                            из
-                            органической части удобрения постепенно питают растение на протяжении последующих 2-3
-                            месяцев.
-                        </p>
                     </div>
-                    <a class="waves-effect waves-light btn-small readmore_end">Скрыть</a>
-                </div>
-                <div class="col l5 offset-l1 s12">
-                    <h5 class="white-text">Навигация по сайту</h5>
-                    <div class="footer__wraper">
-                        <ul class="footer__ul">
-                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                    href="index.html">Главная</a></li>
-                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                    href="services.html">ОМУ (Органоминеральные удобрения)</a></li>
-                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                    href="services-ou.html">ОУ (Органические удобрения)</a></li>
-                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                    href="recomendatsii-po-primrneniu.html">Рекомендации по применению</a></li>
-                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                    href="mineral'nyye_udobreniya.html">Азотные минеральные удобрения</a></li>
-                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                    href="сertifications.html">Сертификаты</a>
+
+                    <nav class="navbar">
+                        <ul>
+                            <li> <a class="waves-effect waves-light" href="index.html">Главная</a></li>
+                            <li> <a class="waves-effect waves-light" href="services.html">ОМУ (Органоминеральные
+                                    удобрения)</a>
                             </li>
-                            <li class="footer__nav"> <a class="grey-text text-lighten-3 waves-effect waves-light"
-                                    href="reviews.html">Отзывы</a></li>
-                            <li class="footer__nav"><a class="grey-text text-lighten-3 waves-effect waves-light"
-                                    href="contact.html">Контакты</a></li>
+                            <li> <a class="waves-effect waves-light" href="services-ou.html">ОУ (Органические
+                                    удобрения)</a>
+                            </li>
+                            <li> <a class="waves-effect waves-light"
+                                    href="recomendatsii-po-primrneniu.html">Рекомендации по
+                                    применению</a></li>
+                            <li> <a class="waves-effect waves-light" href="mineral'nyye_udobreniya.html">Азотные
+                                    минеральные
+                                    удобрения</a></li>
+                            <li> <a class="waves-effect waves-light" href="сertifications.html">Сертификаты</a></li>
+                            <li> <a class="waves-effect waves-light" href="reviews.html">Отзывы</a></li>
+                            <li> <a class="waves-effect waves-light" href="contact.html">Контакты</a></li>
                         </ul>
-                        <ul class="footer__ul">
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://vk.com"><i
-                                        class="fab fa-vk"></i></a></li>
+                    </nav>
+                    <div class="bottom_link">
+                        <div class="tel">
+                            <a href="tel:88612125908" class="link"><i class="fas fa-phone"></i> 8(861)-212-59-08</a>
+                        </div>
+                        <div class="tel">
+                            <a href="tel:89282808892" class="link"><i class="fas fa-mobile-alt"></i>
+                                8(928)-280-88-92</a>
+                        </div>
+                        <div class="tel">
+                            <a href="mailto:organika.00@mail.ru" class="email"><i class="fas fa-envelope"></i>
+                                organika.00@mail.ru</a>
+                        </div>
 
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://facebook.com"><i
-                                        class="fab fa-facebook-f"></i></a></li>
-                            <li class="footer__social waves-effect waves-light"><a target="blank" href="http://instagram.com/organika77/"><i
-                                        class="fab fa-instagram"></i></a></li>
-                        </ul>
+                    </div>
+
+                </ul>
+
+
+            </header>
+        </div>
+        <div class="col s12 m8 l10 col_ml" style="margin-left: 16%;">
+            <main>
+                <div class="header-text">
+                    <div class="container">
+                        <div class="header__wraper">
+                            <div class="header__subtitle">Эксклюзивный дистрибьютор ООО &ldquo;РОСОМУ&rdquo;</div>
+                            <div class="header__title">Органика</div>
+                            <div class="header__subtitle">Продажа органического и органоминерального удобрения</div>
+
+                        </div>
                     </div>
                 </div>
-            </div>
+                <div class='content'>
+                    <div class="container">
+                        <h2 class="content__h2">Отзывы</h2>
+                    </div>
+                </div>
+                <footer class=" page-footer footer">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col l6 s12">
+                                <h5 class="white-text">Уникальная гранула</h5>
+                                <p class="grey-text text-lighten-4">Органоминеральное удобрение — гранулированное
+                                    комплексное
+                                    удобрение пролонгированного действия на основе навоза крупного рогатого скота.
+                                    Представляет
+                                    собой гранулы темно-коричневого цвета, диаметром - 6 мм. Специально разработанная
+                                    гранула
+                                    содержит в своем составе до 85% органических веществ, а также азот, фосфор, калий,
+                                    магний и все
+                                    необходимые микроэлементы.</p>
+                                <a class="waves-effect waves-light btn-small readmore_start">Читать полностью</a>
+                                <div class="readmore">
+                                    <p class="grey-text text-lighten-4">Попадая на поверхность почвы, гранула постепенно
+                                        и
+                                        равномерно
+                                        растворяется, высвобождая при этом
+                                        питательные элементы для ризосферных бактерий, которые фиксируют атмосферный
+                                        азот и
+                                        переводят
+                                        его в усвояемую форму для жизнедеятельности полезной микрофлоры почвы, которая
+                                        синтезирует
+                                        вещества, блокирующие развитие фитопатогенных микроорганизмов, и в конце концов
+                                        для самого
+                                        растения, обеспечивая его пищей в осенне-зимний период.</p>
+                                    <p class="grey-text text-lighten-4">В почве в течение двух трех дней,
+                                        <b>гранула увеличится в
+                                            размерах в несколько раз, и в связи с
+                                            активной жизнедеятельностью биоты (бактерии и микроорганизмы) почвы
+                                            органоминеральный
+                                            субстрат
+                                            распределяется по всей площади внесения.</b>
+
+                                        Минеральные элементы, находящиеся в
+                                        доступной форме,
+                                        сразу проникают в почвенный раствор в зону развития корневой системы, а
+                                        питательные вещества
+                                        из
+                                        органической части удобрения постепенно питают растение на протяжении
+                                        последующих 2-3
+                                        месяцев.
+                                    </p>
+                                </div>
+                                <a class="waves-effect waves-light btn-small readmore_end">Скрыть</a>
+                            </div>
+                            <div class="col l5 offset-l1 s12">
+                                <h5 class="white-text">Навигация по сайту</h5>
+                                <div class="footer__wraper">
+                                    <ul class="footer__ul">
+                                        <li class="footer__nav"><a
+                                                class="grey-text text-lighten-3 waves-effect waves-light"
+                                                href="index.html">Главная</a></li>
+                                        <li class="footer__nav"><a
+                                                class="grey-text text-lighten-3 waves-effect waves-light"
+                                                href="services.html">ОМУ (Органоминеральные удобрения)</a></li>
+                                        <li class="footer__nav"><a
+                                                class="grey-text text-lighten-3 waves-effect waves-light"
+                                                href="services-ou.html">ОУ (Органические удобрения)</a></li>
+                                        <li class="footer__nav"><a
+                                                class="grey-text text-lighten-3 waves-effect waves-light"
+                                                href="recomendatsii-po-primrneniu.html">Рекомендации по применению</a>
+                                        </li>
+                                        <li class="footer__nav"><a
+                                                class="grey-text text-lighten-3 waves-effect waves-light"
+                                                href="mineral'nyye_udobreniya.html">Азотные минеральные удобрения</a>
+                                        </li>
+                                        <li class="footer__nav"><a
+                                                class="grey-text text-lighten-3 waves-effect waves-light"
+                                                href="сertifications.html">Сертификаты</a>
+                                        </li>
+                                        <li class="footer__nav"> <a
+                                                class="grey-text text-lighten-3 waves-effect waves-light"
+                                                href="reviews.html">Отзывы</a></li>
+                                        <li class="footer__nav"><a
+                                                class="grey-text text-lighten-3 waves-effect waves-light"
+                                                href="contact.html">Контакты</a></li>
+                                    </ul>
+                                    <ul class="footer__ul">
+                                        <li class="footer__social waves-effect waves-light"><a target="blank"
+                                                href="http://vk.com"><i class="fab fa-vk"></i></a></li>
+
+                                        <li class="footer__social waves-effect waves-light"><a target="blank"
+                                                href="http://facebook.com"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li class="footer__social waves-effect waves-light"><a target="blank"
+                                                href="http://instagram.com/organika77/"><i
+                                                    class="fab fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-copyright">
+                        <div class="container">
+                            © 2020 Органика
+                        </div>
+                    </div>
+                </footer>
         </div>
-        <div class="footer-copyright">
-            <div class="container">
-                © 2020 Органика
-            </div>
-        </div>
-    </footer>
+    </div>
+    
     <script src="./js/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./js/script.js"></script>
