--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="row mb-0">
+    <div class="row ">
     <div class="col s12 m4 l2" style="position: fixed; z-index: 10; height: 100vh;">
         <header class="main__header">
             <div class="fixed-menu">
